Add optional auth to the metrics endpoint

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 URSA_HYPIXEL_TOKEN=63f72b18-2728-4f27-b4be-7a475664949e
 
 # The port ursa should listen to
+URSA_ADDRESS=0.0.0.0
 URSA_PORT=3000
 
 # A : separated list of files that contain the rules after which ursa proxies requests.
@@ -28,3 +29,5 @@ URSA_RATE_LIMIT_TIMEOUT=300
 # Rate limit bucket - Sets how many requests a user can do within the rate limit timeout, before being restricted.
 URSA_RATE_LIMIT_BUCKET=5
 
+# Metrics bearer token - If set, a header "Authorization: Bearer <TOKEN>" must be provided to access the /_meta/metrics path
+URSA_METRICS_BEARER_TOKEN=
